fix: remade flexbox with users so last element now left-aligned

--- a/src/blocks/get/__users/get__users.css
+++ b/src/blocks/get/__users/get__users.css
@@ -1,9 +1,9 @@
 .get__users {
     display: flex;
+    justify-content: space-between;
     row-gap: 29px;
     column-gap: 29px;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
     list-style: none;
     padding: 0;
 }
@@ -11,5 +11,13 @@
 @media screen and (max-width: 767px) {
     .get__users {
         row-gap: 20px;
+        justify-content: center;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .get__users::after {
+        content: "";
+        flex: auto;
     }
 }
